objects/CMPL123CME__Submission_History__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Core_Id__c</fullName>
        <label>Core Id</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__FDA_Submission_Date__c</fullName>
        <description>FDA Submission Date</description>
        <inlineHelpText>FDA Submission Date</inlineHelpText>
        <label>FDA Submission/Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Message_Id__c</fullName>
        <description>FDA ACK Message Id</description>
        <inlineHelpText>FDA ACK Message Id</inlineHelpText>
        <label>Message Id</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Message__c</fullName>
        <description>Message</description>
        <inlineHelpText>Message</inlineHelpText>
        <label>Message</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Related_EMDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related EMDR Record</description>
        <inlineHelpText>Related EMDR</inlineHelpText>
        <label>Related EMDR</label>
        <referenceTo>CMPL123CME__EMDR__c</referenceTo>
        <relationshipName>EMDR_FDA_ACKs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Source__c</fullName>
        <description>Source</description>
        <inlineHelpText>Source</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FDA</fullName>
                </value>
                <value>
                    <fullName>123Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Stage__c</fullName>
        <description>Submission Statge</description>
        <inlineHelpText>Submission Statge</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>ACK1</fullName>
                </value>
                <value>
                    <fullName>ACK2</fullName>
                </value>
                <value>
                    <fullName>ACK3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Submission History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Submission Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>